// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Folder Tree (Windows) > should add deep nested nodes with windows path 1`] = `
[
  {
    "children": [],
    "key": "C:\\photos",
    "title": "C:\\photos",
  },
  {
    "children": [],
    "key": "C:\\photos\\2024",
    "title": "C:\\photos\\2024",
  },
  {
    "children": [],
    "key": "C:\\photos\\2024\\01",
    "title": "C:\\photos\\2024\\01",
  },
]
`;

exports[`Folder Tree (Windows) > should add root node with windows path 1`] = `
[
  {
    "children": [],
    "key": "C:\\photos",
    "title": "C:\\photos",
  },
]
`;

exports[`Folder Tree (Windows) > should clean deep nested children recursively (windows) 1`] = `
[
  {
    "children": [],
    "key": "C:\\photos",
    "title": "C:\\photos",
  },
  {
    "children": [],
    "key": "C:\\photos\\2024",
    "title": "C:\\photos\\2024",
  },
  {
    "children": [],
    "key": "C:\\photos\\2024\\01",
    "title": "C:\\photos\\2024\\01",
  },
]
`;

exports[`Folder Tree (Windows) > should clean node at various levels (windows) 1`] = `
[
  {
    "children": [],
    "key": "C:\\photos",
    "title": "C:\\photos",
  },
  {
    "children": [],
    "key": "C:\\photos\\2024",
    "title": "C:\\photos\\2024",
  },
  {
    "children": [],
    "key": "C:\\photos\\2024\\01",
    "title": "C:\\photos\\2024\\01",
  },
]
`;

exports[`Folder Tree (Windows) > should not add child if root does not exist (windows) 1`] = `
[
  {
    "children": [],
    "key": "C:\\photos\\2024",
    "title": "C:\\photos\\2024",
  },
]
`;
